# TeamUno_Python

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
api/: test_views.py  urls.py
api/migrations/: 0001_initial.py  0002_profile_like.py
api/models/: __init__.py  comment.py  friendship.py  like.py  notification.py  post.py  profile.py  statustypes.py
api/serializers/: auth_serializers.py
api/views/: __init__.py  auth.py  friendship.py  post.py  profile.py  test.py  user.py
codefire_python_backend/: asgi.py  settings.py  urls.py  wsgi.py
utils/: repo_setup.py  setup_linux.sh  setup_mac.sh  setup_windows.ps1
views/: __init__.py  profile.py  user.py
