[project]
name = "TeamUno_Python"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "^3.8.1"
Django = "^5.1.4"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.10"
sqlparse = "^0.5.3"
Pillow = "^11.1.0"
python-dotenv = "^1.0.1"
django-cors-headers = "^4.7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
